/*
 * The MIT License
 *
 * Copyright 2020 Ayoub Ismaili <ayoubismaili1@gmail.com>.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

syntax = "proto2";

package jroom;
import "com/caporal7/jroom/common/java/proto/JRoomJoinConference.proto";

option java_package = "com.caporal7.jroom.common.java.protoc";
option java_outer_classname = "JRoomProtos";

/* message type */
enum Type {
  INVALID = 0;
  JOIN_CONFERENCE_PROB = 1;
  JOIN_CONFERENCE_AUTH = 2;
}

/* The request message */
message JRoomRequest {
  /* JRoom request type */
  optional Type type = 1 [default = INVALID];
  /* JRoom join conference request */
  optional JRoomJoinConferenceProbeRequest join_conference_prob = 2;
  optional JRoomJoinConferenceAuthRequest join_conference_auth = 3;
}

/* The response message */
message JRoomResponse {
  /* JRoom response type */
  optional Type type = 1 [default = INVALID];
  /* JRoom join conference response */
  optional JRoomJoinConferenceProbeResponse join_conference_prob = 2;
  optional JRoomJoinConferenceAuthResponse join_conference_auth = 3;
}
