/*
 * The MIT License
 *
 * Copyright 2020 Ayoub Ismaili <ayoubismaili1@gmail.com>.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

syntax = "proto2";

package jroom;

option java_package = "com.caporal7.jroom.common.java.protoc";
option java_outer_classname = "JRoomAttendeeProtos";

/* Attendee register request */
message JRoomAttendeeRegisterRequest {
  optional string email = 1;
  optional string password = 2;
}

/* Attendee register response */
message JRoomAttendeeRegisterResponse {
  /* Conference register response type */
  enum ResponseType {
    INVALID_REQUEST    = 0;
    ALREADY_REGISTERED = 1;
    SUCCESS            = 2;
    TOO_MANY_REQUESTS  = 3;
  }

  optional ResponseType type = 1 [default = INVALID_REQUEST];
}

/* Attendee authentication request */
message JRoomAttendeeAuthRequest {
  optional string email = 1;
  optional string password = 2;
}

/* Attendee authentication response */
message JRoomAttendeeAuthResponse {
  /* Attendee authentication response type */
  enum ResponseType {
    INVALID_REQUEST    = 0;
    INVALID_EMAIL_AND_OR_PASSWORD = 1;
    SUCCESS            = 2;
    TOO_MANY_REQUESTS  = 3;
  }

  optional ResponseType type = 1 [default = INVALID_REQUEST];
  optional int32 registered_attendee_id = 2;
  optional string session_cookie = 3;
}

/* Attendee session heartbeat request */
message JRoomAttendeeSessionHeartbeatRequest {
  optional int32 registered_attendee_id = 1;
  optional string session_cookie = 2;
}

/* Attendee session heartbeat response */
message JRoomAttendeeSessionHeartbeatResponse {
  /* Attendee authentication response type */
  enum ResponseType {
    INVALID_REQUEST    = 0;
    SESSION_INVALID_OR_EXPIRED = 1;
    SUCCESS            = 2;
    TOO_MANY_REQUESTS  = 3;
  }

  optional ResponseType type = 1 [default = INVALID_REQUEST];
}

